<resources>
    <string name="app_name">e-Clinic</string>
    <string name="username_input_label">Username</string>
    <string name="password_input_label">Password</string>
    <string name="signup_text">No account yet? Create one</string>
    <string name="login_button_label">Login</string>
    <string name="login_text">Already a member? Login</string>
    <string name="signup_button_label">Create account</string>
    <string name="reminders_bottombar_label">Reminders</string>
    <string name="chats_bottombar_label">Chats</string>
    <string name="settings_bottombar_label">Settings</string>
    <string name="signup_doctor_clinic">Clinic</string>
    <string name="signup_doctor_description">Description</string>
    <string name="age_input_label">Age</string>
    <string name="gender_input_label">Gender</string>
    <string name="gender_radio_group_male">Male</string>
    <string name="gender_radio_group_female">Female</string>
    <string name="date_input_label">Pick a date</string>
    <string name="time_input_label">Pick a time</string>
</resources>
